# mathetake.github.io

./: hugo.toml  index.html  index.md
.github/workflows/: hugo.yaml
_layouts/: default.html
assets/css/: main.css
assets/wasm/: filter.https.wasm
blogs/: gann.html
codes/env-args/: Cargo.toml  README.md  build.rs  entry.S
codes/env-args/src/: main.rs
codes/hand-written-envoy/: envoy.yaml  module.S
codes/runtime_code_generation_in_go_part_1/: main.go  main_arm64.s
content/posts/: extending-envoy-with-handwritten-assembly.md  hello-world.md  runtime-code-generation-in-go-part-1.md  where-is-arguments-envs.md
public/: 404.html  index.html  index.xml  sitemap.xml
public/assets/: combined.min.dcb17aac13c80d97ee5796c67fd8fec3916cafa5e465f01fd50310b065d1745b.css
public/g-xxxxxxxxx/: index.html  index.xml
public/posts/: index.html  index.xml
public/posts/hello-world/: index.html
public/tags/: index.html  index.xml
public/tags/database/: index.html  index.xml
public/tags/java/: index.html  index.xml
templates/: blog_template.html
themes/typo/assets/css/: main.css  utils.css
themes/typo/layouts/_default/: baseof.html  list.html  single.html
themes/typo/layouts/partials/: footer.html  head.html  header.html
themes/typo/layouts/partials/head/: css.html
